# azure-sphere

./: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  applibs_versions.h  ledoutput.c  ledoutput.h  main.c  messages.c  messages.h  sensors.c  sensors.h  uartMine.c  uartMine.h
libraries/avnet_onboard/: CMakeLists.txt  onboard.c  onboard.h
libraries/ccs811/: CMakeLists.txt
libraries/iothub/: CMakeLists.txt
